--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </div>
     
 
-    <img src="/assets/background.jpg" alt="mainpic">
+    <img src="../assets/background.jpg" alt="mainpic">
     <section>
         <h2>About the GIS Club</h2>
         <p>The GIS Club focuses on leveraging geospatial technologies to address disaster-related challenges while fostering a culture of innovation and collaboration. We:</p>
