--- a/index.html
+++ b/index.html
@@ -5,20 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GeoSpatial CLUB</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="../assets/logo.jpeg.jpg" type="image/x-icon">
+    <link rel="icon" href="assets/logo.jpeg.jpg" type="image/x-icon">
     
 </head>
 <body>
     <div class="menu">
         <div class="logo">
-            <img src="../assets/logo.jpeg.jpg" alt="GIS Club Logo">
+            <img src="assets/logo.jpeg.jpg" alt="GIS Club Logo">
             <span>GeoSpatial VIT</span>
         </div>
         <div class="button1">
-            <a href="../Login page/index.html">
+            <a href="Login page/index.html">
                 <button>VITian Login</button>
             </a>
-            <a href="../About Us/index.html">
+            <a href="About Us/index.html">
                 <button>Meet Our Board</button>
             </a>
         </div>
@@ -26,12 +26,12 @@
     </div>
 
     <div class="menu-slider" id="menuSlider">
-        <a href="../Login page/index.html"><button>VITian Login</button></a>
-        <a href="../About Us/index.html"><button>Meet Our Board</button></a>
+        <a href="Login page/index.html"><button>VITian Login</button></a>
+        <a href="About Us/index.html"><button>Meet Our Board</button></a>
     </div>
     
 
-    <img src="../assets/background.jpg" alt="mainpic">
+    <img src="assets/background.jpg" alt="mainpic">
     <section>
         <h2>About the GIS Club</h2>
         <p>The GIS Club focuses on leveraging geospatial technologies to address disaster-related challenges while fostering a culture of innovation and collaboration. We:</p>
