--- a/dashboard.html/index.html
+++ b/dashboard.html/index.html
@@ -52,6 +52,16 @@
         <p>Explore the features and tools provided by GIS Company.</p>
     </main>
 
+    <!-- Notice Container -->
+<div class="notice-container" id="noticeContainer">
+    <h3>Notice</h3>
+    <h2 id="noticeTitle">Notice Title</h2>
+    <p id="noticeContent">Notice Content</p>
+    <span id="noticePostedBy">Posted by: </span>
+    <span id="noticeTime">Time: </span>
+</div>
+
+
     <!-- Footer Section -->
     <footer class="footer">
         <p>&copy; 2024 GIS Company. All rights reserved.</p>
