--- a/dashboard.html/index.html
+++ b/dashboard.html/index.html
@@ -42,6 +42,7 @@
         <ul>
            <li><a href="../Dashboard/index.html">Dashboard</a></li>
            <li><a href="../user chatting/index.html">chat</a></li>
+            <li><a href="../cdmm/index.html">CDMM</a></li>
            <li><a href="../profile/index.html">Profile</a></li>
         </ul>
     </nav>
