--- a/cdmm/index.html
+++ b/cdmm/index.html
@@ -10,7 +10,7 @@
     <header>
        
         <div class="upper">
-            <img src="../assets/logo.jpeg.jpg" alt="VIT Logo">
+            <img src="../assets/maxresdefault.png" alt="VIT Logo">
             <a href="../dashboard/index.html">
                 <button class="button">
                   <span class="button-content">Go back</span>
