--- a/cdmm/index.html
+++ b/cdmm/index.html
@@ -11,7 +11,7 @@
        
         <div class="upper">
             <img src="../assets/maxresdefault.png" alt="VIT Logo">
-            <a href="../dashboard/index.html">
+            <a href="../dashboard.html/index.html">
                 <button class="button">
                   <span class="button-content">Go back</span>
                 </button>
