--- a/dashboard.html/index.html
+++ b/dashboard.html/index.html
@@ -43,6 +43,7 @@
            <li><a href="../Dashboard/index.html">Dashboard</a></li>
            <li><a href="../user chatting/index.html">chat</a></li>
             <li><a href="../cdmm/index.html">CDMM</a></li>
+            <li><a href="../research/index.html">Research<
            <li><a href="../profile/index.html">Profile</a></li>
         </ul>
     </nav>
