--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:title" content="GeoSpatial" />
+    <meta property="og:description" content="Made by VITian. Your reliable taxi booking service." />
+    <meta property="og:image" content="https://geospatialvit.site/assets/background.jpg" />
+    <meta property="og:url" content="https://geospatialvit.site/" />
+    <meta property="og:type" content="website" />
     <title>GeoSpatial CLUB</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="assets/logo.jpeg.jpg" type="image/x-icon">
