--- a/GIS Technology/index.html
+++ b/GIS Technology/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GeoSpatial CLUB</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../GIS Technology/styles.css">
     
     
 </head>
 <body>
-    <script src="script.js" defer></script>
+    <script src="../GIS Technology/script.js" defer></script>
 
     <div class="menu">
         <div class="logo">
