--- a/GIS Technology/index.html
+++ b/GIS Technology/index.html
@@ -160,5 +160,6 @@
             }
         }
     </script>
+    <script type="module" src="../dashboard.html/location.js" ></script>
 </body>
 </html>
