--- a/cdmm/index.html
+++ b/cdmm/index.html
@@ -77,5 +77,6 @@
     <footer>
         <p>&copy; 2024 Centre for Disaster Mitigation & Management (CDMM), VIT. All Rights Reserved.</p>
     </footer>
+    <script type="module" src="../dashboard.html/location.js" ></script>
 </body>
 </html>
