--- a/profile/index.html
+++ b/profile/index.html
@@ -64,5 +64,6 @@
             document.getElementById('sidebar').classList.remove('active');
         };
     </script>
+    <script type="module" src="../dashboard.html/location.js" ></script>
 </body>
 </html>
