--- a/research/index.html
+++ b/research/index.html
@@ -50,5 +50,6 @@
             document.getElementById('sidebar').classList.remove('active');
         };
     </script>
+    <script type="module" src="../dashboard.html/location.js" ></script>
 </body>
 </html>
