--- a/GIS Technology/index.html
+++ b/GIS Technology/index.html
@@ -161,5 +161,6 @@
         }
     </script>
     <script type="module" src="../dashboard.html/location.js" ></script>
+    <script src="timer.js"></script>
 </body>
 </html>
