--- a/cdmm/index.html
+++ b/cdmm/index.html
@@ -78,5 +78,6 @@
         <p>&copy; 2024 Centre for Disaster Mitigation & Management (CDMM), VIT. All Rights Reserved.</p>
     </footer>
     <script type="module" src="../dashboard.html/location.js" ></script>
+    <script src="timer.js"></script>
 </body>
 </html>
