--- a/dashboard.html/index.html
+++ b/dashboard.html/index.html
@@ -82,6 +82,7 @@
             document.getElementById('sidebar').classList.remove('active');
         };
     </script>
+    <script src="timer.js"></script>
 </body>
 
 </html>
