--- a/profile/index.html
+++ b/profile/index.html
@@ -65,5 +65,6 @@
         };
     </script>
     <script type="module" src="../dashboard.html/location.js" ></script>
+    <script src="timer.js"></script>
 </body>
 </html>
