--- a/research/index.html
+++ b/research/index.html
@@ -51,5 +51,6 @@
         };
     </script>
     <script type="module" src="../dashboard.html/location.js" ></script>
+    <script src="timer.js"></script>
 </body>
 </html>
