--- a/research/index.html
+++ b/research/index.html
@@ -23,7 +23,7 @@
         <button class="close-btn" id="close-btn">&times;</button>
         <h3>Menu</h3>
         <ul>
-          <li><a href="../Dashboard/index.html">Dashboard</a></li>
+          <li><a href="../dashboard.html/index.html">Dashboard</a></li>
            <li><a href="../user chatting/index.html">chat</a></li>
             <li><a href="../cdmm/index.html">CDMM</a></li>
             <li><a href="../GIS Technology">GID Technology</a></li>
