--- a/GIS Technology/index.html
+++ b/GIS Technology/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GeoSpatial CLUB</title>
     <link rel="stylesheet" href="../GIS Technology/styles.css">
+    <link rel="icon" href="assets/logo.jpeg.jpg" type="image/x-icon">
     
     
 </head>
