--- a/Login page/index.html
+++ b/Login page/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GeoSpatial VIT</title>
     <link rel="stylesheet" href="../Login page/styles.css">
+    <link rel="icon" href="assets/logo.jpeg.jpg" type="image/x-icon">
 </head>
 
 <body>
