--- a/forgot password/index.html
+++ b/forgot password/index.html
@@ -14,7 +14,7 @@
 <body>
     <header>
         <div class="logo-container">
-            <img src="logo.jpeg.jpg" alt="Logo" class="logo">
+            <img src="../assets/logo.jpeg.jpg" alt="Logo" class="logo">
             <span class="company-name">Company Name</span>
         </div>
         <a href="../Login page/index.html" class="go-back-btn">Go Back</a>
