--- a/forgot password/index.html
+++ b/forgot password/index.html
@@ -15,7 +15,7 @@
     <header>
         <div class="logo-container">
             <img src="../assets/logo.jpeg.jpg" alt="Logo" class="logo">
-            <span class="company-name">Company Name</span>
+            <span class="company-name">GeoSpatial Club</span>
         </div>
         <a href="../Login page/index.html" class="go-back-btn">Go Back</a>
     </header>
