--- a/dashboard.html/index.html
+++ b/dashboard.html/index.html
@@ -17,7 +17,7 @@
     <header class="header">
         <div class="logo-container">
             <img src="../assets/logo.jpeg.jpg" alt="GIS Logo" class="logo">
-            <h1 class="company-name">GIS Company</h1>
+            <h1 class="company-name">GeoSpatial Club</h1>
         </div>
         <div>
             <button class="menu-btn" id="menu-btn">Menu</button>
