--- a/Login page/index.html
+++ b/Login page/index.html
@@ -46,7 +46,9 @@
             <input type="email" id="regEmail" placeholder="Email (vit.ac.in / vitstudent.ac.in)" required>
             <input type="text" id="regPhone" placeholder="Phone Number" required>
             <input type="text" id="regRegNum" placeholder="Registration Number" required>
-            <input type="file" id="profilePic" accept="image/*" required>
+            <label for="profilePic">Upload your profile picture:</label>
+<input type="file" id="profilePic" accept="image/*" required>
+
             <input type="password" id="regPassword" placeholder="Password" required>
             <button id="registerSubmit" class="submit-btn">Register</button>
         </div>
