--- a/cdmm/index.html
+++ b/cdmm/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Centre for Disaster Mitigation & Management (CDMM) - VIT</title>
    <link rel="stylesheet" href="../cdmm/styles.css">
-    <link rel="icon" href="assets/logo.jpeg.jpg" type="image/x-icon">
+       <link rel="icon" href="../assets/logo.jpeg.jpg" type="image/x-icon">
 </head>
 <body>
     <header>
