--- a/dashboard.html/index.html
+++ b/dashboard.html/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dashboard</title>
     <link rel="stylesheet" href="../dashboard.html/styles.css">
-    <link rel="icon" href="assets/logo.jpeg.jpg" type="image/x-icon">
+       <link rel="icon" href="../assets/logo.jpeg.jpg" type="image/x-icon">
     <script type="module" src="https://www.gstatic.com/firebasejs/11.0.2/firebase-app.js"></script>
     <script type="module" src="https://www.gstatic.com/firebasejs/11.0.2/firebase-auth.js"></script>
     <script type="module" src="https://www.gstatic.com/firebasejs/11.0.2/firebase-firestore.js"></script>
