--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
     <meta property="og:type" content="website" />
     <title>GeoSpatial CLUB</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="assets/logo.jpeg.jpg" type="image/x-icon">
-    
+    <link rel="icon" href="../assets/logo.jpeg.jpg" type="image/x-icon">    
 </head>
 <body>
     <div class="menu">
