--- a/Login page/index.html
+++ b/Login page/index.html
@@ -26,6 +26,9 @@
         <!-- Navigation Buttons -->
         <div class="form-toggle">
             <button id="loginBtn" class="toggle-btn">Login</button>
+            <a href="https://board.geospatialvit.site/">
+                <button id="loginBtn" class="toggle-btn">Board Access</button>
+              </a>    
             <button id="registerBtn" class="toggle-btn">New Registration</button>
         </div>
 
