--- a/dashboard.html/index.html
+++ b/dashboard.html/index.html
@@ -44,6 +44,7 @@
            <li><a href="../dashboard.html/index.html">Dashboard</a></li>
            <li><a href="../user chatting/index.html">chat</a></li>
             <li><a href="../cdmm/index.html">CDMM</a></li>
+            <li><a href="../workshop/index.html">WorkShop</a></li>
             <li><a href="../GIS Technology">GID Technology</a></li>
             <li><a href="../research/index.html">Research</a></li>
            <li><a href="../profile/index.html">Profile</a></li>
