--- a/profile/index.html
+++ b/profile/index.html
@@ -30,6 +30,7 @@
            <li><a href="../user chatting/index.html">chat</a></li>
             <li><a href="../cdmm/index.html">CDMM</a></li>
             <li><a href="../GIS Technology/index.html">GID Technology</a></li>
+        <li><a href="../workshop/index.html">WorkShop</a></li>
             <li><a href="../research/index.html">Research</a></li>
            <li><a href="../profile/index.html">Profile</a></li>
     </ul>
