--- a/Login page/index.html
+++ b/Login page/index.html
@@ -17,7 +17,7 @@
             <h1>GeoSpatial VIT</h1>
         </div>
         <div class="header-nav">
-            <a href="index.html" class="back-btn">Go Back</a>
+            <a href="../dashboard.html" class="back-btn">Go Back</a>
         </div>
     </header>
 
