--- a/Login page/index.html
+++ b/Login page/index.html
@@ -1,65 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GeoSpatial VIT</title>
-      <link rel="icon" href="../assets/logo.jpeg.jpg" type="image/x-icon">
+    <title>VITian Login & Registration</title>
     <link rel="stylesheet" href="../Login page/styles.css">
+    <link rel="icon" href="../assets/logo.jpeg.jpg" type="image/x-icon">
+    <script type="module" src="../Login page/scripts.js" defer></script>
 </head>
-
 <body>
     <header>
-        <div class="logo-container">
-            <div class="logo">
-                <img src="../assets/logo.jpeg.jpg" alt="GIS Logo">
-            </div>
-            <h1>GeoSpatial VIT</h1>
-        </div>
-        <div class="header-nav">
-            <a href="../dashboard.html" class="back-btn">Go Back</a>
+        <div class="header-content">
+            <img src="../assets/logo.jpeg.jpg" alt="Logo" class="logo">
+            <h1>GeoSpatial</h1>
+            <button onclick="goBack()" class="go-back-btn">Go Back</button>
         </div>
     </header>
-
-    <div class="container">
-        <!-- Navigation Buttons -->
-        <div class="form-toggle">
-            <button id="loginToggle" class="toggle-btn">VITian Login</button>
-            <a href="https://board.geospatialvit.site/">
-                <button id="boardAccess" class="toggle-btn">Board Access</button>
-            </a>
-            <button id="registerToggle" class="toggle-btn">New Registration</button>
+    <main>
+        <div class="container">
+            <!-- Navigation Buttons -->
+            <div class="form-toggle">
+                <button id="loginToggle" class="toggle-btn active">VITian Login</button>
+                <a href="https://board.geospatialvit.site/">
+                    <button id="boardAccess" class="toggle-btn">Board Access</button>
+                </a>
+                <button id="registerToggle" class="toggle-btn">New Registration</button>
+            </div>
+            <!-- Login Form -->
+            <div class="form-box" id="login-form-box">
+                <h2>Login</h2>
+                <form id="login-form">
+                    <input type="email" id="login-email" placeholder="Email" required>
+                    <input type="password" id="login-password" placeholder="Password" required>
+                    <button type="submit" id="login-btn">Login</button>
+                </form>
+            </div>
+            <!-- Registration Form -->
+            <div class="form-box hidden" id="registration-form-box">
+                <h2>Register</h2>
+                <form id="registration-form" enctype="multipart/form-data">
+                    <input type="text" id="name" placeholder="Name" required>
+                    <input type="email" id="email" placeholder="Email" required>
+                    <input type="password" id="password" placeholder="Password" required>
+                    <input type="text" id="reg-number" placeholder="Registration Number" required>
+                    <input type="tel" id="phone" placeholder="Phone Number" required>
+                    <div class="form-group">
+                        <label for="profile-pic">Upload Your Profile Picture:</label>
+                        <input type="file" id="profile-pic" accept="image/*" required>
+                    </div>
+                
+                    <button type="submit" id="register-btn">Register</button>
+                </form>
+            </div>
         </div>
-
-        <!-- Login Form -->
-        <div id="loginForm" class="form">
-            <h2>Login</h2>
-            <input type="email" id="loginEmail" placeholder="Email" required>
-            <input type="password" id="loginPassword" placeholder="Password" required>
-            <button id="loginSubmit" class="submit-btn">Login</button>
-            <a href="../forgot password/index.html" class="forgot-password">Forgot Password?</a>
-        </div>
-
-        <!-- Registration Form -->
-        <div id="registerForm" class="form hidden">
-            <h2>Register</h2>
-            <input type="text" id="regName" placeholder="Full Name" required>
-            <input type="email" id="regEmail" placeholder="Email (vit.ac.in / vitstudent.ac.in)" required>
-            <input type="text" id="regPhone" placeholder="Phone Number" required>
-            <input type="text" id="regRegNum" placeholder="Registration Number" required>
-            <label for="profilePic">Upload your profile picture:</label>
-            <input type="file" id="profilePic" accept="image/*" required>
-            <input type="password" id="regPassword" placeholder="Password" required>
-            <button id="registerSubmit" class="submit-btn">Register</button>
-        </div>
-    </div>
-
-    <footer class="footer">
-        <p>&copy; 2024 GIS Company. All rights reserved.</p>
+    </main>
+    <footer>
+        <p>© 2024 GeoSpatial. All Rights Reserved.</p>
     </footer>
-
-    <script type="module" src="../Login page/scripts.js"></script>
 </body>
-
 </html>
