--- a/profile/index.html
+++ b/profile/index.html
@@ -52,7 +52,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2024 EasyCab. All rights reserved.</p>
+        <p>&copy; 2024 GeoSpatial. All rights reserved.</p>
     </footer>
 
     <script type="module" src="../profile/script.js"></script>
