--- a/Login page/index.html
+++ b/Login page/index.html
@@ -33,6 +33,7 @@
                     <input type="email" id="login-email" placeholder="Email" required>
                     <input type="password" id="login-password" placeholder="Password" required>
                     <button type="submit" id="login-btn">Login</button>
+                     <a href="../forgot password/index.html" id="ForgotPassword" class="toggle-btn" role="button">Reset Password</a>
                 </form>
             </div>
             <!-- Registration Form -->
