--- a/GIS Technology/index.html
+++ b/GIS Technology/index.html
@@ -6,6 +6,7 @@
     <title>GeoSpatial CLUB</title>
     <link rel="stylesheet" href="../GIS Technology/styles.css">
     <link rel="icon" href="../assets/logo.jpeg.jpg" type="image/x-icon">
+    <script type="module" src="../dashboard.html/location.js" ></script>
     
     
 </head>
