--- a/cdmm/index.html
+++ b/cdmm/index.html
@@ -6,6 +6,7 @@
     <title>Centre for Disaster Mitigation & Management (CDMM) - VIT</title>
    <link rel="stylesheet" href="../cdmm/styles.css">
        <link rel="icon" href="../assets/logo.jpeg.jpg" type="image/x-icon">
+    <script type="module" src="../dashboard.html/location.js" ></script>
 </head>
 <body>
     <header>
