--- a/profile/index.html
+++ b/profile/index.html
@@ -56,6 +56,7 @@
     </footer>
 
     <script type="module" src="../profile/script.js"></script>
+    <script type="module" src="../dashboard.html/location.js" ></script>
     <script>
         // Mobile menu and filter functionality
         document.getElementById('menu-btn').onclick = function () {
