--- a/workshop/index.html
+++ b/workshop/index.html
@@ -41,6 +41,7 @@
     <footer>
         <p>&copy; 2024 GeoSpatial. All rights reserved.</p>
     </footer>
+    <script type="module" src="../dashboard.html/location.js" ></script>
     <script>
         // Mobile menu and filter functionality
         document.getElementById('menu-btn').onclick = function () {
