--- a/profile/index.html
+++ b/profile/index.html
@@ -23,8 +23,12 @@
         <h3>Menu</h3>
         <ul>
            <li><a href="../dashboard.html/index.html">Dashboard</a></li>
-           <li><a href="../user chatting/index.html">chat</a></li>
-           <li><a href="../profile/index.html">Profile</a></li>
+            <li><a href="../user chatting/index.html">chat</a></li>
+             <li><a href="../cdmm/index.html">CDMM</a></li>
+             <li><a href="../workshop/index.html">WorkShop</a></li>
+             <li><a href="../GIS Technology">GID Technology</a></li>
+             <li><a href="../research/index.html">Research</a></li>
+            <li><a href="../profile/index.html">Profile</a></li>
         </ul>
     </nav>
 
