--- a/dashboard.html/index.html
+++ b/dashboard.html/index.html
@@ -4,8 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dashboard</title>
+    <title>GeoSpatial</title>
     <link rel="stylesheet" href="../dashboard.html/styles.css">
+    <script type="module" src="../Login page/scripts.js" defer></script>
     <script type="module" src="https://www.gstatic.com/firebasejs/11.0.2/firebase-app.js"></script>
     <script type="module" src="https://www.gstatic.com/firebasejs/11.0.2/firebase-auth.js"></script>
     <script type="module" src="https://www.gstatic.com/firebasejs/11.0.2/firebase-firestore.js"></script>
@@ -16,7 +17,7 @@
     <header class="header">
         <div class="logo-container">
             <img src="../assets/logo.jpeg.jpg" alt="GIS Logo" class="logo">
-            <h1 class="company-name">GIS Company</h1>
+            <h1 class="company-name">GeoSpatial</h1>
         </div>
         <div>
             <button class="menu-btn" id="menu-btn">Menu</button>
