--- a/dashboard.html/index.html
+++ b/dashboard.html/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GeoSpatial</title>
+    <title>GeoSpatial VIT Club</title>
     <link rel="stylesheet" href="../dashboard.html/styles.css">
     <script type="module" src="../Login page/scripts.js" defer></script>
     <script type="module" src="https://www.gstatic.com/firebasejs/11.0.2/firebase-app.js"></script>
