--- a/GIS Technology/index.html
+++ b/GIS Technology/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GeoSpatial CLUB</title>
+    <title>GeoSpatial VIT CLUB</title>
     <link rel="stylesheet" href="../GIS Technology/styles.css">
     <link rel="icon" href="../assets/logo.jpeg.jpg" type="image/x-icon">
     <script type="module" src="../dashboard.html/location.js" ></script>
