--- a/Login page/index.html
+++ b/Login page/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>VITian Login & Registration</title>
+    <title>GeoSpatial VIT CLUB</title>
     <link rel="stylesheet" href="../Login page/styles.css">
     <link rel="icon" href="../assets/logo.jpeg.jpg" type="image/x-icon">
     <script type="module" src="../Login page/scripts.js" defer></script>
