--- a/forgot password/index.html
+++ b/forgot password/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Forgot Password</title>
+    <title>GeoSpatial VIT CLUB</title>
     <link rel="stylesheet" href="../forgot password/styles.css">
        <link rel="icon" href="../assets/logo.jpeg.jpg" type="image/x-icon">
     <script type="module" src="https://www.gstatic.com/firebasejs/11.0.2/firebase-app.js"></script>
