--- a/Login page/index.html
+++ b/Login page/index.html
@@ -13,7 +13,7 @@
         <div class="header-content">
             <img src="../assets/logo.jpeg.jpg" alt="Logo" class="logo">
             <h1>GeoSpatial</h1>
-            <button onclick="goBack()" class="go-back-btn">Go Back</button>
+            <button onclick="location.href='https://geospatialvit.site/';" class="go-back-btn">Go Back</button>
         </div>
     </header>
     <main>
