--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
+    <meta http-equiv="Pragma" content="no-cache">
+    <meta http-equiv="Expires" content="0">
     <meta property="og:title" content="GeoSpatial VIT Club" />
     <meta property="og:description" content="Discover geospatial innovations and events at GeoSpatial VIT Club." />
     <meta property="og:image" content="https://geospatialvit.site/assets/background.jpg" />
