--- a/profile/index.html
+++ b/profile/index.html
@@ -39,7 +39,7 @@
         <div class="profile-container">
             <div class="profile-details">
                 <h2 id="name">Name: </h2>
-                <p id="regNum">Reg No: </p>
+                <p id="regNumber">Reg No: </p>
                 <p id="email">Email: </p>
                 <p id="phone">Phone: </p>
                 <div id="qrCode"></div>
