--- a/404.html
+++ b/404.html
@@ -89,7 +89,7 @@ footer {
 <body>
     <div class="container">
         <header>
-            <img src="https://form.geospatialvit.site/assets/logo.jpg" alt="GeospatialVIT Logo" class="logo">
+            <img src="https://geospatialvit.site/assets/logo.jpeg.jpg" alt="GeospatialVIT Logo" class="logo">
         </header>
         <main>
             <h1>404</h1>
