--- a/dashboard.html/index.html
+++ b/dashboard.html/index.html
@@ -54,8 +54,8 @@
 
     <!-- Main Dashboard Content -->
     <main class="dashboard-content">
-        <h2>Welcome to the Dashboard</h2>
-        <p>Explore the features and tools provided by GIS Company.</p>
+        <h2>Welcome to the GeoSpatial Club Dashboard</h2>
+        <p>Explore the features and tools provided by GeoSpatial Club.</p>
     </main>
 
     <!-- Notice Container -->
