--- a/research/index.html
+++ b/research/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
     <meta http-equiv="Pragma" content="no-cache">
     <meta http-equiv="Expires" content="0">
-    <title>Will Publish Soon</title>
+    <title>GeoSpatial | Research</title>
     <link rel="stylesheet" href="../research/style.css">
       <link rel="icon" href="../assets/logo.jpeg.jpg" type="image/x-icon">
 </head>
